Couple of suggestions from findbugs to make the code simpler